2010-05-04   Romain Francois <romain@r-enthusiasts.com>

	* R/RcppArmadillo.package.skeleton.R: new package skeleton function
	similar to Rcpp::Rcpp.package.skeleton but targetting
	use of RcppArmadillo
	
	* README: removed and promoted to additional documentation in ?RcppArmadillo

2010-05-03  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/* : update to armadillo 0.9.6

2010-04-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Remove OS_type restriction now that RcppArmadillo
	  includes Armadillo headers, add Doug to Authors and Maintainers

2010-04-03  Douglas Bates  <bates@stat.wisc.edu>

	* inst/include/armadillo: Added the armadillo headers and the
	armadillo_bits directory.  This is from the armadillo sources with
	only the armadillo_bits/config.hpp file modified.

	* configure: and many other configuration files.  Removed the
	foo.in files, modified cleanup not to remove the target files.

2010-03-20  Dirk Eddelbuettel  <edd@max.nulle.part>

	* src/fastLm.cpp: Small fix for Armadillo 0.8.2

2010-03-17   Romain Francois <romain@r-enthusiasts.com>

	* src/fastLm.cpp: added some arma:: prefix

	* src/RcppArmadillo.cpp: update examples to use make_list and showcase
	various ways to use them : Named(.)=., _[.] = , Named( ., . )

2010-03-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.1.0 and initial CRAN upload

2010-03-03  Dirk Eddelbuettel  <edd@debian.org>

	* src/fastLm.cpp: Moved into its own file, some more polish

2010-03-03  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/RcppArmadillo.h: avoid an extra memory copy when
	possible (i.e. in wrap( eGlue) and wrap( eOp ) when the elem_type
	is int or double).

	* inst/include/RcppArmadilloDefines.in.h added the SCALAR macro
	to take care of the 0.9.0 api change

	* src/RcppArmadillo.cpp : fix a runtime error uisng the SCALAR macro

2010-03-02  Dirk Eddelbuettel  <edd@dexter>

	* src/RcppArmadillo.cpp: Added bare-bones 'fastLm' function