@@ -1,19 +1,23 @@
 0.2.0   (under development)
 
+    o   fastLm is now generic and has a formula interface as well as methods
+	    for print, summary, predict to behave like a standard model fitting 
+		function
+
     o   Armadillo sources (using release 0.9.6) are now included in the package
-   	using a standardized build suitable for our purposes (not assuming
-   	Boost or Atlas) -- see ?RcppArmadillo for details
+   	    using a standardized build suitable for our purposes (not assuming
+   	    Boost or Atlas) -- see ?RcppArmadillo for details
    	
    	o	New R function RcppArmadillo.package.skeleton, similar to 
-   	Rcpp::Rcpp.package.skeleton, but targetting use of RcppArmadillo
+   	    Rcpp::Rcpp.package.skeleton, but targetting use of RcppArmadillo
    	
 
 0.1.0	2010-03-11
 
     o	the fastLm() implementation of a bare-bones lm() fit
- 	(using Armadillo's solve() function) provides an example
-	of how efficient code can be written compactly using 
-	the combination of Rcpp, RcppAramadillo and Armadillo
+ 	    (using Armadillo's solve() function) provides an example
+	    of how efficient code can be written compactly using 
+	    the combination of Rcpp, RcppAramadillo and Armadillo
 
     o	support for Rcpp implicit wrap of these types :
     	Mat<T>, Col<T>, Row<T>, Cube<T> where T is one of : 
@@ -22,4 +26,5 @@
     o	support for Rcpp implicit as of these types :
     	Mat<T>, Col<T>, Row<T> where R is one of :
     	int, unsigned int, double, float
+
 
